# workhuman_ml_test

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 884ec015dfc2_model_version_table.py  9b42ab20c450_change_version_to_string_for_timestamps_.py
app/: config.py  database.py  main.py  models.py  schemas.py
app/ml_models/v_20251231_094624/: README.md  encoders.pkl  feature_importance.csv  metrics.json  metrics.txt  prediction_distribution.html
app/routers/: inferences.py  model_versions.py  utils.py
app/scripts/: api_infer.py  batch_infer.py  generate_data.py  plot_utils.py  train.py
scripts/: config.py  generate_data.py
terraform/: main.tf  variables.tf
terraform/modules/ec2/: main.tf  outputs.tf  variables.tf
terraform/modules/rds/: main.tf  outputs.tf  variables.tf
terraform/modules/s3_bucket/: main.tf  variables.tf
tests/: test_cache.py  test_generate_data.py  test_inferences.py  test_ml_service.py  test_train.py  test_utils_integration.py
